# mcp-onedrive-demo

./: .env.sample  .gitignore  Dockerfile  README.md  auth.py  main.py  mcp_client.http  mcp_client01.http  mcp_client02.py  mcp_client03 (OBO with Responses).py  mcp_server.py  pyproject.toml  requirements.txt
