[project]
name = "mcp-onedrive-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=2.1.0",
    "azure-core>=1.41.0",
    "azure-identity>=1.26.0b2",
    "azure-monitor-opentelemetry>=1.8.8",
    "mcp>=1.27.1",
    "msal>=1.36.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]
